<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="3576527475a@gmail.com">ma</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>interfaces</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <build_depend>rclcpp_components</build_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
